syntax = "proto3";

package pbstate;

message StoreBlock {
  int64 height = 1;
}